[project]
name = "deep_fast"
version = "0.1.0"
description = "Team 4 Project Ai vs Real"
authors = [
    {name = "Kimwonjoon", email = "kimpass189@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standart]>=0.31.0",
    "transformers>=4.45.1",
    "PyMySQL>=1.1.1",
    "pytz>=2024.2",
    "streamlit>=1.39.0",
    "matplotlib>=3.9.2",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
